--- a/estilo.css
+++ b/estilo.css
@@ -1,9 +1,27 @@
 body{
-    background-color:black;
+    background-color:red;
     padding: 0%;
     margin: 0%
 }
 
 h1{
-    color: red;
+    color:white;
+    font-size: 40px;
 }
+
+footer{
+    background-color:green;
+    font-size: 36px;
+    
+}
+
+main{
+    background-color:yellow;
+    font-size: 32px;
+   
+}
+header{
+    background-color: darkred;
+    font-size: 32px;
+}
+
